@@ -6,7 +6,7 @@ from .thresh_utility import normalize, cut, gen_kde
 #https://github.com/vvaezian/modified_thompson_tau_test/blob/main/src/Modified_Thompson_Tau_Test/modified_thompson_tau_test.py
 
 class MTT(BaseThresholder):
-    """MTT class for Modified Thompson Tau test thresholder.
+    r"""MTT class for Modified Thompson Tau test thresholder.
 
        Use the modified Thompson Tau test to evaluate a non-parametric means
        to threshold scores generated by the decision_scores where outliers
@@ -32,7 +32,7 @@ class MTT(BaseThresholder):
        that are more than a number of standard deviations away from the mean. This method is
        done iteratively with the Tau citical value being recalculated after each outlier removal
        until the dataset no longer has data points that fall outside of the criterion. The Tau
-       critical value can be obtain by,
+       critical value can be obtained by,
        
        .. math::
        
